tests/baselines/reference/interfaceExtendingClassWithPrivates2.errors.txt
==== tests/cases/conformance/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithPrivates2.ts (5 errors) ====
    class Foo {
        private x: string;
    }
    
    class Bar {
        private x: string;
    }
    
    interface I3 extends Foo, Bar { // error
              ~~
!!! error TS2320: Interface 'I3' cannot simultaneously extend types 'Foo' and 'Bar':
!!! error TS2320:   Named properties 'x' of types 'Foo' and 'Bar' are not identical.
    }
    
    interface I4 extends Foo, Bar { // error
              ~~
!!! error TS2429: Interface 'I4' incorrectly extends interface 'Bar':
!!! error TS2429:   Private property 'x' cannot be reimplemented.
              ~~
!!! error TS2429: Interface 'I4' incorrectly extends interface 'Foo':
!!! error TS2429:   Private property 'x' cannot be reimplemented.
        x: string;
    }
    
    class Baz {
        private y: string;
    }
    
    interface I5 extends Foo, Baz {
        z: string;
    }
    
    var i: I5;
    var r: string = i.z;
    var r2 = i.x; // error
             ~~~
!!! error TS2341: Property 'Foo.x' is inaccessible.
    var r3 = i.y; // error
             ~~~
!!! error TS2341: Property 'Baz.y' is inaccessible.